src/app/home/home.component.css
.landing {
  display: flex;
  flex-direction: column;
}

.main,
.branding,
.set-shot,
.about {
  width: 100vw;
  height: 100vh;
  overflow-x: hidden;
}

.opacity {
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.4);
}

.products {
  width: 100vw;
  display: flex;
  align-items: center;
  min-height: 100vh;
  overflow-x: scroll;
  position: relative;
}

.card {
  min-width: unset;
}

.set-shot {
  background-image: url("src/assets/prod-shot-1.jpg");
  background-size: 184%;
  background-position-x: -109px;
  background-position-y: -21px;
  top: 0;
  display: flex;
  position: relative;
  overflow: hidden;
}

.beekeeper {
  width: 0;
  visibility: hidden;
}

.about-info-cont {
  width: 100%;
}

.shop-container {
  display: flex;
  justify-content: center;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.35);
}

.text-container {
  width: 83%;
  margin: 170px 0 0 0;
}

.shop-text {
  font-size: 45px;
  line-height: 38px;
  letter-spacing: 3px;
  text-align: center;
  color: black;
}

.go-to-shop {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.fa-chevron-down {
  font-size: 40px;
  padding: 30px;
  margin-top: 50px;
  color: black;
}

.branding {
  position: relative;
  background-image: linear-gradient(to bottom right, #49538ae3, #34407de3);
  overflow: hidden;
}

.flower-one,
.flower-two,
.three,
.four,
.five,
.bee-one,
.bee-two,
.seven,
.eight {
  position: absolute;
  z-index: -1;
  opacity: 0.9;
}

.bee-one {
  right: 22px;
  top: 325px;
  width: 10%;
}

.bee-two {
  width: 7%;
  top: 60%;
  left: 11%;
  transform: rotate(30deg);
}

.flower-one {
  width: 91%;
  bottom: -16px;
  left: -51px;
}

.flower-two {
  width: 36%;
  top: 51%;
  right: -8px;
  transform: scaleX(-1);
}

.three {
  width: 15%;
  right: 50px;
  top: 30%;
}
.four {
  bottom: 29%;
  left: 22%;
  width: 9%;
}
.five {
  position: absolute;
  top: 129px;
  left: 16%;
  transform: rotate(-35deg);
  width: 41%;
}

.seven {
  transform: rotate(35deg);
  width: 35%;
  right: -29px;
  top: 77px;
}

.eight {
  width: 30%;
  left: -10px;
  top: 30%;
}

.bee-way-logo {
  width: 60%;
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.about {
  background-color: #002f3e;
  overflow: hidden;
  display: flex;
}

.about-container {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 50px 0 0 5px;
}

.about-text-box {
  width: 72%;
}

.about-title {
  font-size: 45px;
  letter-spacing: 1.5px;
  color: white;
}

.contact-links {
  display: flex;
  width: 72%;
  margin: 30px 0 0 0;
}

.social {
  display: flex;
  flex-direction: column;
  width: 30%;
}

.about-text,
.address {
  font-family: "Oswald", sans-serif;
  color: white;
  font-size: 19px;
  font-weight: 400;
}

.address {
  font-size: 16px;
  letter-spacing: 0.5px;
}

.contact-us {
  margin-top: 15px;
  font-size: 20px;
  color: white;
  letter-spacing: 0.5px;
}

.fa-instagram,
.fa-facebook-square {
  margin: 15px;
  font-size: 35px;
  color: white;
}

@media screen and (min-width: 768px) {
  .beekeeper {
    background-image: url("src/assets/annie-spratt-8_WZU5xKFKk-unsplash.jpg");
    background-size: cover;
    width: 40%;
    height: 100%;
    background-position: center;
    visibility: hidden;
  }
  .beekeeper {
    visibility: visible;
  }

  .about-text-box,
  .contact-links {
    width: 350px;
  }

  .about-info-cont {
    width: 60%;
  }
  .bee-way-logo {
    width: 250px;
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
  }

  .landing {
    flex-direction: row;
  }

  .branding {
    width: 40vw;
  }
  .set-shot {
    width: 60vw;
  }

  .set-shot {
    background-size: cover;
    background-position-x: center;
    background-position-y: center;
  }

  .text-container {
    display: flex;
    justify-content: center;
    margin-top: 22vh;
  }

  .shop-text {
    font-size: 60px;
    line-height: 52px;
  }

  .card {
    width: 200px;
    height: 395px;
    border: hidden;
  }

  .products {
    justify-content: space-evenly;
  }
}
@media screen and (min-width: 1024px) {
  .card {
    width: 250px;
    height: 425px;
  }

  .about-text-box,
  .contact-links {
    width: 495px;
  }
}

